--- a/app.json
+++ b/app.json
@@ -18,6 +18,10 @@
             "value": "",
             "required": false
         }
-    }
+    },
+    "buildpacks": [
+        {
+            "url": "heroku/python"
+        }]
 
 }
